1.1.0
    - Support Java module.
    - Collect uapi module service information at compiling time to help generate uapi meta file.