@@ -1,0 +1,2 @@
+uapi.common.ArgumentChecker.required(key, "key");
+return (T) this._attributes.put(key, attribute);
